--- a/Surveys/S20250226.md
+++ b/Surveys/S20250226.md
@@ -69,12 +69,10 @@ For a comprehensive overview of LLMs, we refer the readers to LLM survey papers~
 
 ### 2.2·语音表示
 
-
-\revised{
 Speech is captured as waveform signals, sampled at a specific sampling rate and quantization value, and represented as a sequence of amplitude values.
 For deep learning applications, they are often converted to speech representations with shorter sequence lengths, such as log Mel filterbanks, which we refer to as \textbf{filterbanks}.
 Following the success of the unsupervised pre-training approach in other fields, self-supervised speech models (S3Ms)~\citep{baevski-etal-2020-wav2vec2,hsu-etal-2021-hubert,chen-etal-2022-wavlm} were introduced.
-These models predict masked frames to learn representations that capture phonetic information \citep{choi-etal-2024}, along with a wide range of speech characteristics, such as speaker identity, paralinguistic information, and word-level information \citep{pasad-etal-2024}.}
+These models predict masked frames to learn representations that capture phonetic information \citep{choi-etal-2024}, along with a wide range of speech characteristics, such as speaker identity, paralinguistic information, and word-level information \citep{pasad-etal-2024}.
 We refer to these contextualized frame-level features as \textbf{latent representations}.
 
 To integrate speech (which is naturally continuous) with LLMs (which are designed to handle discrete tokens), \textbf{audio tokens} that are more discrete than previous representations have been studied recently.
@@ -87,3 +85,43 @@ Semantic tokens can be obtained from S3Ms by discretizing latent representations
 Acoustic tokens have been studied in the line of audio codecs (e.g., MP3 \citep{iso11172-3}, Opus \cite{rfc6716}, etc.), which aim to compress audio signals.
 Neural audio codecs \citep{zeghidour-etal-2021-soundstream,defossez-etal-2023-encodec,kumar-etal-2023-dac} have recently gained traction as powerful tools to improve coding efficiency as well as perceptual quality.
 Because acoustic tokens exhibit better quality in producing output speech signals \cite{borsos-etal-2023-audiolm} but fail to capture semantic information like semantic tokens do, recent studies combine both to obtain better representations for speech-language modeling \citep{wang-etal-2023-viola,zhang-etal-2024-speechtokenizer,defossez-etal-2024-moshi}.
+
+## 3·基于文本的集成方法
+
+This approach primarily utilizes text as both input and output for LLMs.
+One of the most direct implementations of this method is through \textbf{cascaded integration}, which is highly adaptable to various tasks.
+Within tasks like ASR, LLMs are not limited to working with the final recognition results but can also operate on intermediate hypotheses. This allows for sophisticated operations like \textbf{LLM rescoring}, and \textbf{LLM GER} (Generative Error Correction).
+
+### 3.1·级联式集成
+
+Cascaded integration is the most simple and straightforward approach for integrating speech with LLMs.
+This involves the backbone LLM being supported by ASR and Text-to-Speech (TTS) interfaces for handling speech inputs and outputs, as well as the LLM invoking external models to solve speech-related tasks.
+This approach has been employed in models such as AudioGPT~\cite{huang-2024-audio-gpt} and HuggingGPT~\cite{shen-2023-hugginggpt} to expand the applications of LLMs.
+The primary advantage of cascaded integration is its ease of implementation, allowing various tasks to be integrated into a single model with minimal effort.
+However, this method suffers from accuracy problems due to error propagation and efficiency problems due to the latency of processing through multiple steps.
+
+### 3.2·LLM Rescoring
+
+Before research on LLMs explosively expanded, ASR models had already begun using rescoring mechanisms with external language models to improve transcription accuracy~\cite{mcdermott-2019-lm-fusion,shin-2019-sentence-scoring,salazar-2020-mlm-scoring,xu-2022-rescorebert}.
+Recently, there have been efforts towards utilizing LLMs for rescoring, and it has been proven to be effective~\cite{chen-2023-longform,udagawa-2022-rescoring}.
+
+As shown in Figure \ref{fig:rescore} (a), this process involves generating a list of $n$-best hypotheses $\mathcal{H} = \{Y_1,Y_2,...,Y_n\}$  from the speech input $X$ through the initial ASR decoding, which is then re-evaluated using an LLM to find the hypothesis with higher linguistic coherence to improve accuracy.
+The rescoring process can be expressed as
+\begin{align*}
+Y^* &= \text{argmax}_{Y_i \in \mathcal{H}} \ [(1\!-\!\lambda) \log p_{\text{AM}}(Y_i|X) \\
+&\quad + \lambda \log p_{\text{LLM}}(Y_i)]
+\end{align*}
+where $p_{\text{AM}}$ and $p_{\text{LLM}}$ is the probability according to the ASR model (Acoustic Modle, AM) and the LLM, and $\lambda$ is a weight balancing the contributions of two models.
+
+### 3.3·LLM Generative Error Correction
+
+Based on the concept of rescoring, LLM GER represents a new approach that fully utilizes the generative capability of LLMs.
+As shown in Figure \ref{fig:rescore} (b), the method utilizes an instructional prompt together with the n-best hypotheses list to guide the LLM in generating transcription predictions.
+~\citet{chen-2023-hyporadise} described this task performed by the LLM as hypotheses-to-transcription (H2T), which they explore under both fine-tuning and few-shot settings.
+Further studies have explored this direction with PEFT~\cite{hu-2024-noise-robust} or in-context learning~\cite{yang-2023-tap,ma-2023-error-correction}.
+
+Instead of merely selecting the best hypothesis from a pre-existing set,
+this method allows the LLM to generate a new transcription based on the hypotheses.
+By doing so, LLMs can potentially produce a result with a quality better than all initial hypotheses.
+Such an approach has proven to be well-suited for other tasks such as speech-to-text translation (S2TT), which require more generative capabilities of the model~\cite{hu-etal-2024-gentranslate}.
+\citet{lin-etal-2024-neko} adopted the mixture-of-experts architecture \citep{fedus-etal-2022,jiang-etal-2024-mixtral} to let different experts handle different types of generative errors produced by task-specific models including ASR and ST models.
