--- a/Surveys/S20250226.md
+++ b/Surveys/S20250226.md
@@ -125,3 +125,61 @@ this method allows the LLM to generate a new transcription based on the hypothes
 By doing so, LLMs can potentially produce a result with a quality better than all initial hypotheses.
 Such an approach has proven to be well-suited for other tasks such as speech-to-text translation (S2TT), which require more generative capabilities of the model~\cite{hu-etal-2024-gentranslate}.
 \citet{lin-etal-2024-neko} adopted the mixture-of-experts architecture \citep{fedus-etal-2022,jiang-etal-2024-mixtral} to let different experts handle different types of generative errors produced by task-specific models including ASR and ST models.
+
+## 4·基于潜在表示的集成方法
+
+In this integration approach,
+a \textbf{speech encoder} is used to process the speech input and generate latent representations that are directly fed into the LLM, bypassing the embedding layer.
+The speech encoder is usually a Transformer-based model, which can be pre-trained on large-scale speech data or trained from scratch for the speech-LLM integration.
+
+A critical issue of this approach is the sequence length gap between the speech and text modalities. Speech features, often sampled at rates of 50 to 100 frames per second, result in longer sequences compared to text tokens. Consequently, some form of \textbf{modality adaptation} mechanism is necessary to bridge these modalities, ensuring that the latent representations align with the LLM’s embedding space.
+
+### 4.1·语音编码器
+
+For the speech encoder, various pre-trained models can be utilized to provide representations learned from large-scale speech data.
+This includes S3Ms (e.g. HuBERT~\cite{hsu-etal-2021-hubert}) as well as the encoder of pre-trained ASR models (e.g. Whisper~\cite{radford-etal-2023-whisper}).
+To connect the pre-trained speech encoder and the LLM, an \emph{adapter} (also referred to as a \emph{bridge network} or a \emph{module connector}) is usually adopted.
+
+An alternative approach is to train a speech encoder from scratch, specifically for the LLM integration.
+The structure of the speech encoder is usually a multi-layer Transformer~\cite{vaswani-etal-2017} encoder or Conformer~\cite{gulati-2020-conformer}.
+
+### 4.2·模态适配器
+
+The modality adaptation mechanism is adopted for the speech encoder to map original frame-wise representations to token-wise representations.
+This allows the LLM to process the speech sequence in a manner similar to how it processes the text sequence, without having to deal with overly long sequences caused by long-form speech inputs.
+
+The adaptation is usually accomplished by the adapter between pre-trained models, which is introduced in \ref{sec:speech-encoder}, or any part of the self-designed trained-from-scratch speech encoder.
+To this end, various adaptation methods have been proposed. Apart from some rarely-used strategies such as random downsampling~\cite{wang-2023-slm}, most of the methods can be categorized into three groups, as shown in Figure \ref{fig:adapter}: convolutional downsampling, CTC compression, and Q-former.
+According to comparisons conducted by ~\citet{hono-2023-integration} and ~\citet{yu-2024-connecting}, the Q-former generally outperforms convolutional downsampling, which in turn outperforms CTC compression.
+Next, we will detail these strategies in the following sections.
+
+#### 卷积下采样
+
+A basic strategy where the speech representation sequence is downsampled from its original length using convolutional layers~\cite{hono-2023-integration}.
+When using the same number for kernel size and stride, it becomes equivalent to simply stacking multiple representation vectors together, which may only benefit parameter efficiency~\cite{fathullah-2024-prompting}.
+For better alignment with the LLM's embeddings,
+some variants add a fully connected layer or a multi-head Transformer network after the convolutional layers~\citep{yu-2024-connecting}.
+
+#### CTC Compression
+
+CTC compression involves two steps: (i) Training the speech encoder, or a part of it, on the ASR task based on Connectionist Temporal Classification (CTC)~\cite{graves-2013-ctc}; (ii) Compressing the representation sequence based on the results of CTC predictions. Several specific strategies for the step (ii) include:
+
+Blank-removal: Discarding all the frames predicted as blanks~\cite{hono-2023-integration,wu-2023-decoder-only}.
+
+Frame-averaging: Averaging the latent representations of consecutive frames whose CTC predictions are the same label~\cite{hono-2023-integration,wu-2023-decoder-only}.
+
+Blank-probability: Discarding any frames with a CTC probability for blank exceeding a threshold~\cite{ling-2024-fully-formatted}.
+
+#### Q-Former
+
+Many studies~\cite{yu-2024-connecting,tang-etal-2024-salmonn,pan-2023-cosmic} adopt Q-Former for the modality adaptation. Q-Former is a Transformer-based module converting variable-length input sequences into fixed-length output query representations. It is initially proposed for vision -- text modality alignment~\cite{li-2023-blip}.
+
+### 4.3·训练策略
+
+The optimal approach is to train the whole model consisting of the speech encoder and the LLM. However, fully fine-tuning the LLM is computationally expensive. Consequently, PEFT methods such as LoRA~\cite{xu-2024-lora}, are often adopted to reduce resource consumption.
+
+In scenarios where a pre-trained speech encoder is utilized, the primary focus is training the adapter connecting two pre-trained models. Whether to fine-tune the speech encoder or the LLM with PEFT seems optional as the decision differs across studies.
+On this topic, several studies~\cite{hono-2023-integration,pham-2024-comprehensive} have conducted systematic investigations by comparing the effects of fine-tuning versus freezing different modules.
+
+As for training the speech encoder from scratch, it is commonly done jointly with fine-tuning LLM with PEFT.
+\citet{wu-2023-decoder-only} proposed employing a two-stage training process where PEFT is not initiated until the speech encoder has undergone some initial training, ensuring a more stable training progression.
