--- a/Surveys/S20250226.md
+++ b/Surveys/S20250226.md
@@ -223,3 +223,27 @@ Spirit-LM \citep{nguyen-etal-2025-spiritlm} uses Llama 2 \citep{touvron-etal-202
 Similarly to previous studies, they trained a text LLM and a codec model similar to \citet{zhang-etal-2024-speechtokenizer}.
 Their architecture enables duplex ability of listening and generating speech by using a hierarchical autoregressive model consisting of two Transformer modules, namely Temporal Transformer and Depth Transformer \citep{lee-etal-2022-rqtransformer}.
 This architecture is also shown to be effective for speech-to-speech translation (S2ST)~\cite{labiausse-etal-2025-hibiki}.
+
+## 6·对比分析
+
+### 6.1·优点与缺点
+
+It is important to understand the advantages and disadvantages of the three integration approaches when employing them for different applications. We summarize their pros and cons as follows:
+- \textbf{Degree of integration:} Latent-representation-based $>$ Audio-token-based $>$ Text-based.
+- \textbf{Interpretability:} Text-based $>$ Audio-token-based $>$ Latent-representation-based.
+- \textbf{Speech generation ability:} Text-based and audio-token-based approach can generate speech, whereas latent-representation-based approaches typically cannot.
+
+Based on these characteristics, different approaches excel in different scenarios:
+- Latent-representation-based and audio-token-based approaches are better than text-based approach, in scenarios where sufficient resources (data, computational power, and time) are available or when real-time processing is required. Deeper integration reduces error propagation and latency but demands more extensive resources.
+- Text-based approach is better than latent-representation-based and audio-token-based approaches, in scenarios where resources are limited or when greater interpretability is required.
+- Latent-representation-based approach is better than audio-token-based, in scenarios where speech is only considered as input. Latent-representation-based methods provide the deepest integration when generating textual or other downstream outputs.
+- Audio-token-based is better than latent-representation-based, in scenarios where speech is also considered as output. Generating speech from latent representations remains challenging, making audio-token-based approaches more suitable in these cases.
+
+### 6.2·定量对比
+
+We provide a comprehensive performance comparison in Table~\ref{tab:benchmarks}, comparing studies with different integration approaches across multiple tasks: ASR, S2TT, S2ST, TTS.
+The table highlights key metrics such as word error rate (WER), BLEU score, and others, alongside each model’s integration method and backbone components.
+
+While Table~\ref{tab:benchmarks} summarizes many state-of-the-art results, direct comparisons can be challenging due to variations in backbone LLMs, acoustic front-ends, and training protocols. For instance, although BLEU scores on CoVoST~2~\cite{wang-etal-2021-covost2} indicate that deeper integration methods (e.g., latent-representation-based) often yield improved performance, model size and training resources also play a significant role. Future work should focus on more uniform experimental conditions to isolate the impact of each approach.
+
+Nonetheless, the metrics in Table~\ref{tab:benchmarks} serve as a starting point for evaluating how well each method handles different tasks. The results suggest that deeper integration (e.g., latent-representation-based) can be beneficial when sufficient computational resources and training data are available, whereas text-based methods often offer greater interpretability and simpler pipelines.
