--- a/Models/-SVC/2025.05.27_VibE-SVC.md
+++ b/Models/-SVC/2025.05.27_VibE-SVC.md
@@ -84,3 +84,134 @@ Audio samples are available at \url{https://castlechoi.github.io/VibE-SVC-demo}.
 ![](Figure/architecture_svc.pdf)
 
 <a id="fig:svc_architecture">VibE-SVC</a>
+
+## 2·Method
+
+We propose a controllable SVC model that enables style conversion between straight and vibrato.
+
+To separate style-related variations, we employ a DWT-based method to decompose the F0 contour into low- and high-frequency contours.
+
+The high-frequency contour is then predicted by a pitch style converter to perform singing style conversion.
+
+An overview of the VibE-SVC framework is shown in Figure [fig:overall_architecture](#fig:overall_architecture).
+
+### Vibrato disentanglement
+
+We use DWT to decompose a signal into approximation and detail coefficients, corresponding to the low- and high-frequency components.
+
+Approximation coefficient $A$ and detail coefficient $D$ are defined as follows:
+
+$$
+\begin{aligned}
+
+A_j[k] &= \sum_nx[n]\phi_{j,k}[n], \label{equation:dwt_approx} \\
+D_j[k] &= \sum_nx[n]\psi_{j,k}[n],\label{equation:dwt_detail}
+
+\end{aligned}
+$$
+
+where $x[n]$ denotes source signal. 
+$j$, $k$, and $n$ denote the decomposition level of DWT, the position of wavelet function, and the position of signal $x$, respectively. 
+$\phi$ and $\psi$ denote the scaling function and the wavelet function, respectively.
+
+To reconstruct the low- and high-frequency signals from the corresponding coefficients, we use the inverse discrete wavelet transform (iDWT) as follows:
+
+$$
+\begin{aligned}
+
+x[n] &= \sum_kA_{L}[k]\phi_{L,k}[n]
++ \sum_{j=1}^{L}\sum_kD_j[k]\psi_{j,k}[n], 
+\label{equation:iDWT}
+
+\end{aligned}
+$$
+
+where $L$ denotes the lowest frequency DWT level. 
+Based on Equation [equation:iDWT](#equation:iDWT), we reconstruct low- and high-frequency F0 contours from the approximation coefficient and detail coefficients.
+
+As shown in Figure [fig:dwt_analysis](#fig:dwt_analysis), high-frequency F0 contour $x_{high}$ and low-frequency F0 contour $x_{low}$ are defined as follows:
+
+$$
+\begin{aligned}
+
+x_{high}[n] &= \sum_kA_{L}[k]\phi_{L,k}[n], \label{equation:iDWT_high}\\
+x_{low}[n] &= \sum_{j=1}^L\sum_kD_j[k]\psi_{j,k}[n].\label{equation:iDWT_low}
+
+\end{aligned}
+$$
+
+Based on Equations [equation:iDWT_high](#equation:iDWT_high) and [equation:iDWT_low](#equation:iDWT_low), the source F0 contour is reconstructed by low- and high-frequency F0 contours as follows:
+
+$$
+\begin{aligned}
+
+x[n] &= x_{low}[n] + x_{high}[n]. \label{equation:iDWT_recon}
+
+\end{aligned}
+$$
+
+We adopt the Daubechies1 (db1) wavelet function [^Daubechies1992Ten] to enhance the extraction of consistent vibrato extent and facilitate model training.
+
+In DWT, the db1 wavelet function produces a rectangular function that aligns well with the characteristics of the musical instrument digital interface (MIDI).
+
+### Pitch style converter
+
+As shown in Figure [fig:converter_architecture](#fig:converter_architecture), we use log F0 contour to normalize the vibrato scale across frequencies, and decompose it into frequency components using DWT.
+
+The low-frequency F0 contour, voice flag vector, and style embedding obtained from the style lookup table are concatenated and used as input to the style encoder to predict the high-frequency F0 contour as the target.
+
+After prediction, the log F0 contour converted to the target style is reconstructed by Equation [equation:iDWT_recon](#equation:iDWT_recon).
+
+The predicted log F0 contour is then denormalized and fed into the diffusion decoder.
+
+Since the vibrato rate is typically characterized by a frequency range of 5 to 8 Hz [^Liu2021Vibrato], [^Nakano2006Automatic], we adopt a multi-period discriminator (MPD) [^Kong2020HiFi-Gan] to capture the periodic characteristics in the high-frequency F0 contour.
+
+The predicted and ground-truth high-frequency log F0 contour are used as the input to the MPD.
+
+We train the model using reconstruction loss $L_{recon}$ for log F0 contour, adversarial loss $L_{adv}$ [^Mao2017Least],
+and feature matching loss $L_{fm}$.
+
+The training loss functions are defined as follows: 
+
+$$
+\begin{aligned}
+
+L(G) &= L_{recon}(G)+\mathcal L_{fm}(G)+\mathcal L_{adv}(G), \label{equation:generator_loss}\\
+L(D) &= L_{adv}(D), \label{equation:discriminator_loss}
+
+\end{aligned}
+$$
+
+where $G$ denotes the generator and $D$ denotes the discriminator.
+
+![](Figure/dwt_orig_f0.pdf)
+
+<a id="fig:orig_pitch">Source F0 contour</a>
+
+### Overall architecture
+
+As shown in Figure [fig:overall_architecture](#fig:overall_architecture), VibE-SVC consists of two main components: the SVC model and the pitch style converter, which are trained separately.
+
+The SVC model generates Mel-spectrograms conditioned on HuBERT [^Hsu2021HuBERT] units, speaker embeddings, the F0 contour, and volume.
+
+The HuBERT units are interpolated to align with the F0 contour, while the volume is computed as the squared magnitude of the input audio.
+
+The SVC model is optimized with a simple diffusion loss, whereas the pitch style converter is trained according to the method described in Section 2.2.
+
+For training, the source speaker embedding and source F0 contour are used as inputs.
+
+During inference, we provide the target style embedding to predict the style-transferred F0 contour.
+
+Then, we provide the target speaker embedding and the predicted F0 contour as input to the SVC model.
+
+To adjust the pitch range, we scale the F0 contour by the ratio of the mean F0 values of the source and target speakers.
+
+The mean F0 value for each speaker is computed in advance.
+
+<a id="tab:main_table">Comparison results of style transfer.
+
+The MOS and SMOS are presented with 95\% confidence intervals.</a>
+
+![](Figure/exp_corr_style_only.pdf)
+
+<a id="fig:style_only_conversion">Style-Only conversion</a>
