--- a/Models/-SVC/2025.05.27_VibE-SVC.md
+++ b/Models/-SVC/2025.05.27_VibE-SVC.md
@@ -394,3 +394,17 @@ Experimental results from both objective and subjective evaluations demonstrate 
 The current model focuses on controlling vibrato, serving as a starting point for exploring a wider range of singing styles.
 
 In future work, we plan to extend the model to capture additional styles related to timbre and aperiodic pitch variations, further improving its applicability.
+
+## 6·Acknowledgements
+
+This work was partly supported by the Institute of Information \& Communications Technology Planning \& Evaluation (IITP) grant funded by the Korea government (MSIT) (Artificial Intelligence Graduate School Program (Korea University) (No.
+
+RS-2019-II190079), Artificial Intelligence Innovation Hub (No.
+
+RS-2021-II212068), AI Technology for Interactive Communication of Language Impaired Individuals (No.
+
+RS-2024-00336673), and Artificial Intelligence Star Fellowship Support Program to Nurture the Best Talents (IITP-2025-RS-2025-02304828)).
+
+\bibliographystyle{IEEEtran}
+\bibliography{paper_bib}
+\end{document}
