--- a/Models/-SVC/2025.05.27_VibE-SVC.md
+++ b/Models/-SVC/2025.05.27_VibE-SVC.md
@@ -408,3 +408,41 @@ RS-2024-00336673), and Artificial Intelligence Star Fellowship Support Program t
 \bibliographystyle{IEEEtran}
 \bibliography{paper_bib}
 \end{document}
+
+## References
+
+[^Nachmani2019Unsupervised]: Unsupervised Singing Voice Conversion. Proc. Interspeech 2019.
+[^Zhang2022VISinger]: VISinger: Variational Inference With Adversarial Learning for End-to-End Singing Voice Synthesis. Proc. IEEE Int. Conf. Acoust., Speech, Signal Process. (ICASSP) 2022.
+[^Liu2022Diffsinger]: Diffsinger: Singing Voice Synthesis via Shallow Diffusion Mechanism. Proc. AAAI Conf. Artif. Intell. (AAAI) 2022.
+[^Liu2021Diffsvc]: Diffsvc: A Diffusion Probabilistic Model for Singing Voice Conversion. Proc. IEEE Autom. Speech Recognit. Underst. Workshop (ASRU) 2021.
+[^Byun2024Midi-Voice]: Midi-Voice: Expressive Zero-Shot Singing Voice Synthesis via Midi-Driven Priors. Proc. IEEE Int. Conf. Acoust., Speech, Signal Process. (ICASSP) 2024.
+[^Ning2023Vits-Based]: Vits-Based Singing Voice Conversion Leveraging Whisper and Multi-Scale F0 Modeling. Proc. IEEE Autom. Speech Recognit. Underst. Workshop (ASRU) 2023.
+[^Bai2024Spa-Svc]: SPA-SVC: Self-Supervised Pitch Augmentation for Singing Voice Conversion. Proc. Interspeech 2024.
+[^Liu2021Vibrato]: Vibrato Learning in Multi-Singer Singing Voice Synthesis. Proc. IEEE Autom. Speech Recognit. Underst. Workshop (ASRU) 2021.
+[^Zhang2024TCS}inger]: {TCS}inger: Zero-Shot Singing Voice Synthesis With Style Transfer and Multi-Level Style Control. Proc. Empir. Methods Nat. Lang. Process. (EMNLP) 2024.
+[^Zhao2024SinTechSVS]: SinTechSVS: A Singing Technique Controllable Singing Voice Synthesis System. IEEE/ACM Trans. Audio, Speech, Lang. Process. 2024.
+[^Hsu2025Many-to-Many]: Many-to-Many Singing Performance Style Transfer on Pitch and Energy Contours. IEEE Signal Process. Lett. 2025.
+[^Luo2020Singing]: Singing Voice Conversion With Disentangled Representations of Singer and Vocal Technique Using Variational Autoencoders. Proc. IEEE Int. Conf. Acoust., Speech, Signal Process. (ICASSP) 2020.
+[^Chen2023Few]: A Few Shot Learning of Singing Technique Conversion Based on Cycle Consistency Generative Adversarial Networks. Proc. IEEE Int. Conf. Acoust., Speech, Signal Process. (ICASSP) 2023.
+[^Wang2022Towards]: Towards High-Fidelity Singing Voice Conversion With Acoustic Reference and Contrastive Predictive Coding. Proc. Interspeech 2022.
+[^Lim2000Text]: Text Extraction in MPEG Compressed Video for Content-Based Indexing. Proc. 15th Int. Conf. Pattern Recognit. 2000.
+[^Kim2015Abstract]: Abstract Representations of Associated Emotions in the Human Brain. J. Neurosci. 2015.
+[^Lee1996Multiresolution]: Multiresolution Recognition of Unconstrained Handwritten Numerals With Wavelet Transform and Multilayer Cluster Neural Network. Pattern Recognit. 1996.
+[^Ren2021FastSpeech]: FastSpeech 2: Fast and High-Quality End-to-End Text to Speech. Int. Conf. Learn. Represent. (ICLR) 2021.
+[^Noyum2021Boosting]: Boosting the Predictive Accurary of Singer Identification Using Discrete Wavelet Transform for Feature Extraction. arXiv:2102.00550.
+[^Lee2022Fre-Gan]: FRE-GAN 2: Fast and Efficient Frequency-Consistent Audio Synthesis. Proc. IEEE Int. Conf. Acoust., Speech, Signal Process. (ICASSP) 2022.
+[^Kim2024Period]: Period Singer: Integrating Periodic and Aperiodic Variational Autoencoders for Natural-Sounding End-to-End Singing Voice Synthesis. Proc. Interspeech 2024.
+[^Song2022Singing]: Singing Voice Synthesis With Vibrato Modeling and Latent Energy Representation. Proc. IEEE Intl. Workshop on Multimedia Signal Processing (MMSP) 2022.
+[^Daubechies1992Ten]: Ten Lectures on Wavelets. Society for Industrial and Applied Mathematics 1992.
+[^Nakano2006Automatic]: An Automatic Singing Skill Evaluation Method for Unknown Melodies Using Pitch Interval Accuracy and Vibrato Features. Proc. Interspeech 2006.
+[^Kong2020HiFi-GAN]: HiFi-GAN: Generative Adversarial Networks for Efficient and High Fidelity Speech Synthesis. Neural Inf. Process. Syst. (NeurIPS) 2020.
+[^Mao2017Least]: Least Squares Generative Adversarial Networks. Proc. IEEE/CVF Int. Conf. Comput. Vis. (ICCV) 2017.
+[^Hsu2021HuBERT]: HuBERT: Self-Supervised Speech Representation Learning by Masked Prediction of Hidden Units. IEEE/ACM Trans. Audio, Speech, Lang. Process. 2021.
+[^Wilkins2018VocalSet]: VocalSet: A Singing Voice Dataset. Proc. Int. Soc. Music Inf. Retrieval Conf. 2018.
+[^Morise2009Fast]: Fast and Reliable F0 Estimation Method Based on the Period Extraction of Vocal Fold Vibration of Singing Voice and Speech. Proc. AES 35th International Conference 2009.
+[^Van2016Wavenet]: Wavenet: A Generative Model for Raw Audio. arXiv:1609.03499.
+[^Lu2022DPM-Solver++]: DPM-Solver++: Fast Solver for Guided Sampling of Diffusion Probabilistic Models. arXiv:2211.01095.
+[^Lee2023Big{VGAN]: Big{VGAN}: A Universal Neural Vocoder With Large-Scale Training. Int. Conf. Learn. Represent. (ICLR) 2023.
+[^Ren2019FastSpeech]: FastSpeech: Fast, Robust and Controllable Text to Speech. Neural Inf. Process. Syst. (NeurIPS) 2019.
+[^Kim2021Conditional]: Conditional Variational Autoencoder With Adversarial Learning for End-to-End Text-to-Speech. Proc. Int. Conf. Mach. Learn. (ICML) 2021.
+[^Li2024Mert]: {MERT}: Acoustic Music Understanding Model With Large-Scale Self-Supervised Training. Int. Conf. Learn. Represent. (ICLR) 2024.
