--- a/Models/-SVC/2024.09.10_RobustSVC.md
+++ b/Models/-SVC/2024.09.10_RobustSVC.md
@@ -288,3 +288,15 @@ Model without $L_{sim}$ and CIN module leads to significant performance degradat
 In addition, the removal of the Real/Fake discriminator led to a degradation in speech quality.
 
 \vspace{-4pt}
+
+## 4·Conclusions
+
+In this work, we introduce RobustSVC, a novel SVC architecture with an adversarial training strategy for any-to-one conversion. 
+Our approach significantly improves the model's noise robustness compared to previous recognition-synthesis based approaches, enabling the conversion of audio with noise such as BGM into clean vocals performed by the target singer.
+
+Experimental results demonstrate that the proposed RobustSVC outperforms the baseline methods in terms of both naturalness and similarity, covering scenarios with both noise and no noise. 
+The ablation study is carried out to confirm the effectiveness of components in the RobustSVC model.
+
+Looking ahead, our future focus will be on any-to-many SVC tasks and exploring the utilization of additional external unannotated and internal corpora to minimize naturalness loss and enhance the model's generalization.
+
+\newpage
