--- a/Models/-SVC/2024.09.10_RobustSVC.md
+++ b/Models/-SVC/2024.09.10_RobustSVC.md
@@ -310,3 +310,35 @@ This work is supported by National Natural Science Foundation of China (62076144
 \bibliography{mybib}
 
 \end{document}
+
+## References
+
+[^Kobayashi2014Statistical]: Statistical Singing Voice Conversion With Direct Waveform Modification Based on the Spectrum Differential. Fifteenth Annual Conference of the International Speech Communication Association 2014.
+[^Villavicencio2010Applying]: Applying Voice Conversion to Concatenative Singing-Voice Synthesis. Eleventh Annual Conference of the International Speech Communication Association 2010.
+[^Kobayashi2015Statistical]: Statistical Singing Voice Conversion Based on Direct Waveform Modification With Global Variance. Sixteenth Annual Conference of the International Speech Communication Association 2015.
+[^Toda2007One-to-Many]: One-to-Many and Many-to-One Voice Conversion Based on Eigenvoices. 2007 IEEE International Conference on Acoustics, Speech and Signal Processing-Icassp'07 2007.
+[^Luo2020Singing]: Singing Voice Conversion With Disentangled Representations of Singer and Vocal Technique Using Variational Autoencoders. ICASSP 2020-2020 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2020.
+[^Deng2020Pitchnet]: Pitchnet: Unsupervised Singing Voice Conversion With Pitch Adversarial Network. ICASSP 2020-2020 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2020.
+[^Lu2020Vaw-Gan]: Vaw-Gan for Singing Voice Conversion With Non-Parallel Training Data. 2020 Asia-Pacific Signal and Information Processing Association Annual Summit and Conference (APSIPA ASC) 2020.
+[^Li2021PPG-Based]: PPG-Based Singing Voice Conversion With Adversarial Representation Learning. ICASSP 2021-2021 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2021.
+[^Chen2019Singing]: Singing Voice Conversion With Non-Parallel Data. 2019 IEEE Conference on Multimedia Information Processing and Retrieval (MIPR) 2019.
+[^Guo2020Phonetic]: Phonetic Posteriorgrams Based Many-to-Many Singing Voice Conversion via Adversarial Training. arXiv:2012.01837.
+[^Zhang2023Leveraging]: Leveraging Content-Based Features From Multiple Acoustic Models for Singing Voice Conversion. arXiv:2310.11160.
+[^Ning2023Vits-Based]: Vits-Based Singing Voice Conversion Leveraging Whisper and Multi-Scale F0 Modeling. 2023 IEEE Automatic Speech Recognition and Understanding Workshop (ASRU) 2023.
+[^Wang2021Towards]: Towards High-Fidelity Singing Voice Conversion With Acoustic Reference and Contrastive Predictive Coding. arXiv:2110.04754.
+[^Dai2020Noise]: Noise Robust TTS for Low Resource Speakers Using Pre-Trained Model and Speech Enhancement. arXiv:2005.12531.
+[^Zhao2022Disentangling]: Disentangling Content and Fine-Grained Prosody Information via Hybrid Asr Bottleneck Features for Voice Conversion. ICASSP 2022-2022 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2022.
+[^Dumoulin2016Learned]: A Learned Representation for Artistic Style. arXiv:1610.07629.
+[^Kong2020Hifi-Gan]: Hifi-Gan: Generative Adversarial Networks for Efficient and High Fidelity Speech Synthesis. Advances in Neural Information Processing Systems 2020.
+[^Gulati2020Conformer]: Conformer: Convolution-Augmented Transformer for Speech Recognition. arXiv:2005.08100.
+[^Zhao2023Adversarial]: Adversarial Speaker Disentanglement Using Unannotated External Data for Self-Supervised Representation-Based Voice Conversion. 2023 IEEE International Conference on Multimedia and Expo (ICME) 2023.
+[^Shen2018Natural]: Natural TTS Synthesis by Conditioning Wavenet on Mel Spectrogram Predictions. 2018 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2018.
+[^Wang2022Opencpop]: Opencpop: A High-Quality Open Source Chinese Popular Song Corpus for Singing Voice Synthesis. arXiv:2201.07429.
+[^Huang2021Multi-Singer]: Multi-Singer: Fast Multi-Singer Singing Voice Vocoder With a Large-Scale Corpus. Proceedings of the 29th ACM International Conference on Multimedia 2021.
+[^Rafii2017MUSDB18-A]: MUSDB18-a Corpus for Music Separation. 
+[^Niekerk2022Comparison]: A Comparison of Discrete and Soft Speech Units for Improved Voice Conversion. ICASSP 2022-2022 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2022.
+[^Panayotov2015Librispeech]: Librispeech: An Asr Corpus Based on Public Domain Audio Books. 2015 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2015.
+[^Rouard2023Hybrid]: Hybrid Transformers for Music Source Separation. ICASSP 2023-2023 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2023.
+[^Huang2023Singing]: The Singing Voice Conversion Challenge 2023. 2023 IEEE Automatic Speech Recognition and Understanding Workshop (ASRU) 2023.
+[^Chen2022Large-Scale]: Large-Scale Self-Supervised Speech Representation Learning for Automatic Speaker Verification. ICASSP 2022-2022 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2022.
+[^Wang2023Wespeaker]: Wespeaker: A Research and Production Oriented Speaker Embedding Learning Toolkit. ICASSP 2023-2023 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2023.
